# RAG-Project

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
experiments/: ingestion_experiements.ipynb  retrieval_experiemts.ipynb
src/: config.yml  ingestion.py  main.py  milvus_setup.py  response_generation.py  retrieval.py
