[project]
name = "simple-rag-pipeline-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses-json>=0.6.7",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "nltk>=3.9.4",
    "numpy>=2.4.5",
    "ollama>=0.6.2",
    "pymilvus>=3.0.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
]
